--- a/style.css
+++ b/style.css
@@ -3,3 +3,34 @@ body {
   height: 100%;
   margin: 0;
 }
+h1{
+  text-align: center;
+}
+img {
+    display: block;
+    margin: 0 auto;
+}
+#featured-property p {
+  width: 800px;
+  margin: 10px auto;
+  text-align: center;
+}
+nav {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+nav a {
+  background: greenyellow;
+}
+figcaption {
+  font-size: 14px;
+  text-align: center;
+}
+#details div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
+}
+
